view/ui.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

/**
 * mobile friendly
 */
input {
    max-width: 100%;
}
li {
    word-wrap: break-word;
}

body {
    font-size: 15px;
    height: 100%;
}

#echo_input, #me_input {
    border: 0px;
    font-size: 25px;
}

#echo_input:focus, #me_input:focus {
    outline: none;
}

#echo_input {
    width: 100%;
}
#me_input {
    width: 100%;
    text-align: center;
}

#wall > ul {
    list-style-type: none;
    margin: 0;
    padding: 0;
    height: 100%;
    overflow-y: auto;
}

#wall > ul > li {
    padding: 10px;
    margin: 10px 5px 10px 5px;
}

#wall {
    position: fixed;
    width: 100%;
    top: 50px;
    bottom: 50px;
}

#menubar, #input {
    padding: 10px;
    position: absolute;
    width: 100%;
    height: 50px;
    list-style-type: none;
    font-size: 25px;
}
#menubar {
    z-index: 101;
    top: 0;
}
#input {
    bottom: 0;
}

#input_wrapper, #me_wrapper {
    padding: 3px;
    border-bottom-width: 2px;
    border-bottom-style: solid;
}

::-webkit-input-placeholder {
   opacity: 0.5 !important;
}

#menu_channels, #menu_nicknames {
    cursor: pointer;
    padding-left: 5px;
    padding-right: 5px;
}
#menu_channels {
    float: left;
}
#menu_nicknames {
    float: right;
}

#nicknames, #channels {
    list-style-type: none;
    width: 200px;
    position: fixed;
    top: 50px;
    height: 100%;
    display: none;
    z-index: 100;
    font-size: 15px;
    padding: 10px;
}

#nicknames > li, #channels > li {
    cursor: pointer;
    padding: 10px;
    overflow: hidden;
}

#nicknames {
    right: 0;
    overflow-y: auto;
}
#channels {
    left: 0;
    overflow-y: auto;
}

#close_lists {
    position: fixed;
    height: 100%;
    width: 100%;
    display: none;
}

#close_lists {
    z-index: 99;
}

#me {
    position: fixed;
    height: 100%;
    width: 100%;
    z-index: 200;
    opacity: 1;
    display: block;
}
#me_wrapper {
    position: absolute;
    top: 40%;
    left: 50%;
    margin-left: -200px;
    width: 400px;
    text-align: center;
}

#encrypt {
    cursor: pointer;
    position: fixed;
    bottom: 0;
    left: 0px;
    padding: 6px;
    padding-left: 11px;
}
#encrypt_img {
    display: none;
}

#current_window_name {
    display: none;
    padding: 0px 20px 0px 20px;
    opacity: 0.5;
}

